--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,11 @@
                             <i class="fas fa-exclamation-triangle"></i> Reportar Incidente
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('predictions') }}">
+                            <i class="fas fa-bell"></i> Predicciones
+                        </a>
+                    </li>
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav">
