--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,23 @@
                 </ul>
                 <ul class="navbar-nav">
                     {% if current_user.is_authenticated %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#" id="notificationsDropdown" role="button" data-bs-toggle="dropdown">
+                            <i class="fas fa-bell"></i> Notificaciones
+                            <span class="badge bg-danger" id="notificationBadge" style="display: none;">0</span>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-end notification-dropdown" aria-labelledby="notificationsDropdown">
+                            <div class="notification-header px-3 py-2">
+                                <h6 class="m-0">Notificaciones</h6>
+                            </div>
+                            <div id="notificationList" class="notification-list">
+                                <!-- Notifications will be inserted here -->
+                            </div>
+                            <div class="notification-footer px-3 py-2">
+                                <a href="{{ url_for('notifications') }}" class="text-center d-block">Ver todas</a>
+                            </div>
+                        </div>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('logout') }}">
                             <i class="fas fa-sign-out-alt"></i> Cerrar Sesión
