--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -2,6 +2,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div id="toastContainer"></div>
 <div class="container">
     <div class="row">
         <div class="col-md-12 mb-4">
