--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,11 @@
                             <i class="fas fa-bell"></i> Predicciones
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('statistics') }}">
+                            <i class="fas fa-chart-bar"></i> Estadísticas
+                        </a>
+                    </li>
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav">
